Rename component files

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,16 +1,16 @@
-@use "alert";
-@use "badge";
-@use "breadcrumbs";
-@use "button";
-@use "button-group";
-@use "card";
-@use "close-button";
+@use "alert/alert";
+@use "badge/badge";
+@use "breadcrumbs/breadcrumbs";
+@use "button/button";
+@use "button-group/button-group";
+@use "card/card";
+@use "close-button/close-button";
 @use "form";
-//@use "input-group";
-@use "modal";
-@use "pagination";
-@use "popup";
-@use "progress";
-@use "sidebar";
-@use "tabs";
-@use "topbar";
+//@use "input-group/input-group";
+@use "modal/modal";
+@use "pagination/pagination";
+@use "popup/popup";
+@use "progress/progress";
+@use "sidebar/sidebar";
+@use "tabs/tabs";
+@use "topbar/topbar";
