--- a/src/scss/components/form/_index.scss
+++ b/src/scss/components/form/_index.scss
@@ -1,6 +1,6 @@
-@use "check";
-@use "file-selector";
-@use "form-label";
-@use "form-text";
-@use "select";
-@use "text-field";
+@use "check/check";
+@use "file-selector/file-selector";
+@use "form-label/form-label";
+@use "form-text/form-text";
+@use "select/select";
+@use "text-field/text-field";
